[project]
name = "vesting-sandstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecdsa>=0.19.0",
    "firebase-admin>=6.6.0",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-secret-manager>=2.22.0",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
